--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
@@ -9,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Headline</h1>
+			<h1>Starfield</h1>
 		</header>
 			<section id="content">
 				<canvas id="Starfield" data-processing-sources="Starfield.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    by Luis Palacios
 	    </footer>
 	</body>
 </html>
